unpackaged/main/default/objects/Privacy__c/Privacy__c.object-meta.xml
<CustomObject>
    <label>Privacy</label>
    <nameField>
        <displayFormat>PM{0}</displayFormat>
        <label>Privacy No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>