unpackaged/main/default/objects/Privacy__c/fields/Privacy_Message__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Message__c</fullName>
    <label>Privacy Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviso de Inicio</fullName>
            </value>
            <value>
                <fullName>Aviso de Empresa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>