unpackaged/main/default/objects/Privacy__c/fields/Privacy_Notice__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Notice__c</fullName>
    <label>Privacy Notice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>