unpackaged/main/default/objects/Privacy__c/fields/Timestamp_of_User_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_of_User_Acceptance__c</fullName>
    <label>Timestamp of User Acceptance</label>
    <type>DateTime</type>
</CustomField>