unpackaged/main/default/objects/Privacy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Privacy_Message__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Timestamp_of_User_Acceptance__c</columns>
    <columns>Privacy_Notice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>